<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_c1_hardware</name>
  <version>1.0.0</version>
  <description>Rover C1 hardware interfaces</description>
  <maintainer email="potlogradu@gmail.com">radu potlog</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>

  <depend>control_toolbox</depend>
  <depend>realtime_tools</depend>


  <depend>pluginlib</depend>

  <depend>rclcpp</depend>

  <depend>rclcpp_lifecycle</depend>
  
  <depend>ardupilot_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
